--- a/lab5/client/src/App.css
+++ b/lab5/client/src/App.css
@@ -12,18 +12,26 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #28547a;
+	height: 150px;
+	padding: 40px;
+	color: #222;
+	position: relative;
 }
 
+.App-title {
+  text-align: center；
+}
+
+.navlink {
+	padding: 0.4rem 0.8rem;
+	background-color: white;
+	border-radius: 3px;
+	color: #28547a;
+	text-decoration: none !important;
+	margin-right: 20px;
+}
 .App-link {
   color: #61dafb;
 }
